upload changes in Animated portfolio Website

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,13 +12,23 @@
     <header class="header">
         <a href="#" class="logo">Jacob.</a>
         <nav class="navbar">
-            <a href="#">Home</a>
+            <a href="#" class="active">Home</a>
             <a href="#">About</a>
             <a href="#">Services</a>
             <a href="#">Portfolio</a>
             <a href="#">Contact</a>
         </nav>
     </header>
+    <section class="home">
+        <div class="home-content">
+            <h1>Hi, I'm Jacob Aiden</h1>
+            <h3>Frontend Developer</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur consequuntur laudantium quibusdam ratione, quos soluta est ipsum adipisci rerum vitae voluptatem recusandae sit itaque omnis modi officia.</p>
+            <div class="btn-box">
+                <a href="#">Hire Me</a>
+                <a href="#">Let's Talk</a>
+            </div>
+        </div>
+    </section>
 </body>
-
 </html>
