upload changes in Animated portfolio Website

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                 <a href="#">Let's Talk</a>
             </div>
         </div>
+        <div class="home-sci">
+            <a href="#"><i class='bx bxl-facebook'></i></a>
+            <a href="#"><i class='bx bxl-twitter' ></i></a>
+            <a href="#"><i class='bx bxl-linkedin' ></i></a>
+        </div>
     </section>
 </body>
 </html>
