upload changesbin animated Portfolio Website

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <a href="#"><i class='bx bxl-twitter' ></i></a>
             <a href="#"><i class='bx bxl-linkedin' ></i></a>
         </div>
+        <span class="img-hover"></span>
     </section>
 </body>
 </html>
